[metadata]
name = PyCurator
version = 0.1a1
author = Michael Baluja
author_email = mbaluja@ucsd.edu
description = Easily collect data from popular online data repositories.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/michaelbaluja/PyCurator
license = BSD-3-CLAUSE
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/michaelbaluja/PyCurator/issues
classifiers = 
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
install_requires = 
    kaggle
    openml
    pandas
    requests
python_requires = >= 3.10

[options.entry_points]
console_scripts =
    pycurator = pycurator.cli:main

[options.extras_require]
excel =
    openpyxl