[metadata]
name = PyCurator
version = 0.1.1
author = Michael Baluja
author_email = michaelbaluja@protonmail.com
description = Collect data from popular data repositories with ease.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/michaelbaluja/PyCurator
license = BSD-3-CLAUSE
license_files =
    LICENSE.txt
project_urls =
    Bug Tracker = https://github.com/michaelbaluja/PyCurator/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    kaggle
    openml
    pandas
    requests
python_requires = >= 3.10

[options.entry_points]
gui_scripts =
    pycurator = pycurator.cli:main

[options.extras_require]
excel =
    openpyxl